--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Generated files
 /sourcecodes/*
+/tasks/*
 
 # IDE files
 .vscode/
@@ -33,3 +34,4 @@ yarn-error.log*
 # Cache
 .cache/
 .npm/
+# add tasks
