--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "simple-git": "^3.22.0",
-    "body-parser": "^1.20.2"
+    "simple-git": "^3.22.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
